--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <h2>Contact Me</h2>
     <ul>
-      <li>Email: <a href="mailto:you@example.com">you@example.com</a></li>
-      <li>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></li>
+      <li>Email: <a href="mailto:jannaphm@gmail.com">jannaphm@gmail.com</a></li>
+      <li>GitHub: <a href="https://github.com/jntph" target="_blank">jntph</a></li>
       <li>LinkedIn: <a href="https://linkedin.com/in/yourusername" target="_blank">yourusername</a></li>
     </ul>
   </div>
