Update header and LinkedIn link

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hello, I'm Janna</h1>
+    <h1>Janna Tien Pham</h1>
     <p>Welcome to my personal page! I'm learning cloud computing and web development.</p>
     
-    <img src="https://via.placeholder.com/150" alt="Your photo" class="profile-pic" />
+    <img src="https://images.contentstack.io/v3/assets/bltcedd8dbd5891265b/blt4a4af7e6facea579/6668df6ceca9a600983250ac/beautiful-flowers-hero.jpg?q=70&width=640&auto=webp" alt="Your photo" class="profile-pic" />
 
     <h2>Contact Me</h2>
     <ul>
       <li>Email: <a href="mailto:jannaphm@gmail.com">jannaphm@gmail.com</a></li>
-      <li>GitHub: <a href="https://github.com/jntph" target="_blank">jntph</a></li>
-      <li>LinkedIn: <a href="https://linkedin.com/in/yourusername" target="_blank">yourusername</a></li>
+      <li>GitHub: <a href="https://github.com/jntph" target="_blank">Janna TP</a></li>
+      <li>LinkedIn: <a href="https://linkedin.com/in/tien-nt-pham" target="_blank">Tien (Janna) Pham</a></li>
     </ul>
   </div>
 </body>
